# resilient-read

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RELEASE.md
examples/: README.md  full-session.json  rr.make_cursor.json  rr.read_bytes.json  rr.read_lines.json  rr.read_next.json  rr.read_tail.json  rr.search_then_page.json  rr.stat.json
examples/claude-code-hooks/: resilient_read_nudge.py
src/resilient_read/: __init__.py  errors.py  reader.py  server.py
tests/: conftest.py  test_reader.py  test_stdio_integration.py
