[project]
name = "resilient-read"
version = "0.1.1"
description = "MCP server for resilient chunked reads of large files"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Justice Owusu Agyemang", email = "jay@sperixlabs.org" },
]
keywords = ["mcp", "agents", "chunked-read", "context-window"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "starlette>=0.37.2",
    "uvicorn>=0.30.0",
]

[project.scripts]
resilient-read = "resilient_read.server:main"

[project.urls]
Homepage = "https://github.com/jayluxferro/resilient-read"
Issues = "https://github.com/jayluxferro/resilient-read/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resilient_read"]

[tool.pytest.ini_options]
testpaths = ["tests"]
